@@ -113,6 +113,12 @@ val output_substring : t -> string -> int -> int -> unit
 (** Same as {!output} but take a string as argument instead of a byte
     sequence. *)
 
+val output_bigarray :
+  t -> (_, Bigarray.int8_unsigned_elt, Bigarray.c_layout) Bigarray.Array1.t ->
+  int -> int -> unit
+(** Same as {!output} but take the data from a bigarray.
+    @since 5.2 *)
+
 (** {1:flushing Flushing} *)
 
 val flush : t -> unit
